--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,18 @@
             android:text="jump to activity_view_draw" />
 
         <Button
+            android:id="@+id/btn_jump_view_draw2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="jump to activity_view_draw_recyclerview" />
+
+        <Button
+            android:id="@+id/btn_jump_view_draw3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="jump to activity_view_draw_viewpager" />
+
+        <Button
             android:id="@+id/btn_jump_view_scroller"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
