--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -23,41 +23,16 @@
 
 
         <Button
-            android:id="@+id/btn_change"
+            android:id="@+id/btn_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:text="change" />
-
-        <Button
-            android:id="@+id/btn_jump"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="jump to activity2" />
+            android:text="startService" />
 
         <Button
-            android:id="@+id/btn_jump_view_draw"
+            android:id="@+id/btn_bind"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="okhttp" />
-
-        <Button
-            android:id="@+id/btn_jump_view_draw2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="jump to activity_view_draw_recyclerview" />
-
-        <Button
-            android:id="@+id/btn_jump_view_draw3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="jump to activity_view_draw_viewpager" />
-
-        <Button
-            android:id="@+id/btn_jump_view_scroller"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="jump to activity_view_scroller" />
+            android:text="bindService" />
 
 
     </LinearLayout>
